Added spectral cleaning grid search

--- a/graph_database/Neo4j_Auto_Import_and_Queries.ipynb
+++ b/graph_database/Neo4j_Auto_Import_and_Queries.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -86,84 +86,84 @@
       "\n",
       "Available resources:\n",
       "  Total machine memory: 13.49GiB\n",
-      "  Free machine memory: 878.9MiB\n",
+      "  Free machine memory: 173.6MiB\n",
       "  Max heap memory : 910.5MiB\n",
       "  Max worker threads: 12\n",
-      "  Configured max memory: 261.8MiB\n",
+      "  Configured max memory: 81.38MiB\n",
       "  High parallel IO: true\n",
       "\n",
       "Cypher type normalization is enabled (disable with --normalize-types=false):\n",
       "  Property type of 'Weight' normalized from 'float' --> 'double' in /home/eddie/.config/Neo4j Desktop/Application/relate-data/dbmss/dbms-e4c1e17b-4cb7-4b84-a9fb-3fde3105cb8a/import/relationships.csv\n",
       "\n",
-      "Import starting 2024-03-08 22:29:30.673+0000\n",
+      "Import starting 2024-03-08 23:27:25.194+0000\n",
       "  Estimated number of nodes: 3.05 k\n",
       "  Estimated number of node properties: 3.05 k\n",
-      "  Estimated number of relationships: 4.57 M\n",
-      "  Estimated number of relationship properties: 4.57 M\n",
-      "  Estimated disk space usage: 340.4MiB\n",
+      "  Estimated number of relationships: 4.68 M\n",
+      "  Estimated number of relationship properties: 4.68 M\n",
+      "  Estimated disk space usage: 343.7MiB\n",
       "  Estimated required memory usage: 510.0MiB\n",
       "\n",
-      "(1/4) Node import 2024-03-08 22:29:30.785+0000\n",
+      "(1/4) Node import 2024-03-08 23:27:25.440+0000\n",
       "  Estimated number of nodes: 3.05 k\n",
-      "  Estimated disk space usage: 6.672MiB\n",
+      "  Estimated disk space usage: 4.651MiB\n",
       "  Estimated required memory usage: 510.0MiB\n",
-      "-......... .......... .......... .......... ..........   5% ∆51ms\n",
-      ".......... .......... .......... .......... ..........  10% ∆1ms\n",
+      "-......... .......... .......... .......... ..........   5% ∆78ms\n",
+      ".......... .......... .......... .......... ..........  10% ∆3ms\n",
       ".......... .......... .......... .......... ..........  15% ∆1ms\n",
-      ".......... .......... .......... .......... ..........  20% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  20% ∆1ms\n",
       ".......... .......... .......... .......... ..........  25% ∆1ms\n",
-      ".......... .......... .......... .......... ..........  30% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  35% ∆1ms\n",
-      ".......... .......... .......... .......... ..........  40% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  45% ∆1ms\n",
-      ".......... .......... .......... .......... ..........  50% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  30% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  35% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  40% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  45% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  50% ∆1ms\n",
       ".......... .......... .......... .......... ..........  55% ∆1ms\n",
       ".......... .......... .......... .......... ..........  60% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  65% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  70% ∆1ms\n",
-      ".......... .......... .......... .......... ..........  75% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  80% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  65% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  70% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  75% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  80% ∆1ms\n",
       ".......... .......... .......... .......... ..........  85% ∆0ms\n",
       ".......... .......... .......... .......... ..........  90% ∆1ms\n",
       ".......... .......... .......... .......... ..........  95% ∆0ms\n",
-      ".......... .......... .......... .......... .......... 100% ∆0ms\n",
+      ".......... .......... .......... .......... .......... 100% ∆1ms\n",
       "\n",
-      "Node import COMPLETED in 240ms\n",
+      "Node import COMPLETED in 451ms\n",
       "\n",
-      "(2/4) Relationship import 2024-03-08 22:29:31.026+0000\n",
-      "  Estimated number of relationships: 4.57 M\n",
-      "  Estimated disk space usage: 333.7MiB\n",
+      "(2/4) Relationship import 2024-03-08 23:27:25.892+0000\n",
+      "  Estimated number of relationships: 4.68 M\n",
+      "  Estimated disk space usage: 339.1MiB\n",
       "  Estimated required memory usage: 517.6MiB\n",
-      ".......... .......... .......... .......... ..........   5% ∆1s 54ms\n",
-      ".......... .......... .......... .......... ..........  10% ∆206ms\n",
+      ".......... .......... .......... .......... ..........   5% ∆2s 462ms\n",
+      ".......... .......... .......... .......... ..........  10% ∆1ms\n",
       ".......... .......... .......... .......... ..........  15% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  20% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  25% ∆202ms\n",
-      ".......... .......... .......... .......... ..........  30% ∆3ms\n",
-      ".......... .......... .......... .......... ..........  35% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  40% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  45% ∆201ms\n",
+      ".......... .......... .......... .......... ..........  20% ∆601ms\n",
+      ".......... .......... .......... .......... ..........  25% ∆209ms\n",
+      ".......... .......... .......... .......... ..........  30% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  35% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  40% ∆401ms\n",
+      ".......... .......... .......... .......... ..........  45% ∆604ms\n",
       ".......... .......... .......... .......... ..........  50% ∆1ms\n",
       ".......... .......... .......... .......... ..........  55% ∆0ms\n",
       ".......... .......... .......... .......... ..........  60% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  65% ∆1ms\n",
-      ".......... .......... .......... .......... ..........  70% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  65% ∆202ms\n",
+      ".......... .......... .......... .......... ..........  70% ∆201ms\n",
       ".......... .......... .......... .......... ..........  75% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  80% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  85% ∆146ms\n",
-      ".......... .......... .......... .......... ..........  90% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  95% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  80% ∆201ms\n",
+      ".......... .......... .......... .......... ..........  85% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  90% ∆246ms\n",
+      ".......... .......... .......... .......... ..........  95% ∆1ms\n",
       ".......... .......... .......... .......... .......... 100% ∆0ms\n",
       "\n",
-      "Relationship import COMPLETED in 2s 618ms\n",
+      "Relationship import COMPLETED in 5s 532ms\n",
       "\n",
-      "(3/4) Relationship linking 2024-03-08 22:29:33.645+0000\n",
+      "(3/4) Relationship linking 2024-03-08 23:27:31.426+0000\n",
       "  Estimated required memory usage: 510.0MiB\n",
-      ".......... .......... .......... .......... ..........   5% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  10% ∆1ms\n",
-      ".......... .......... .........- .........- ..........  15% ∆1s 26ms\n",
-      ".......... .......... .......... .......... ..........  20% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  25% ∆0ms\n",
+      ".......... .......... .......... .......... ..........   5% ∆402ms\n",
+      ".......... .......... .......... .......... ..........  10% ∆0ms\n",
+      "...-...... .......... .......... .......... ..........  15% ∆200ms\n",
+      ".......... .......... ......-... .......... ..........  20% ∆201ms\n",
+      ".......... .......... .......... .......... ..........  25% ∆611ms\n",
       ".......... .......... .......... .......... ..........  30% ∆0ms\n",
       ".......... .......... .......... .......... ..........  35% ∆0ms\n",
       ".......... .......... .......... .......... ..........  40% ∆0ms\n",
@@ -173,42 +173,42 @@
       ".......... .......... .......... .......... ..........  60% ∆0ms\n",
       ".......... .......... .......... .......... ..........  65% ∆0ms\n",
       ".......... .......... .......... .......... ..........  70% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  75% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  75% ∆1ms\n",
       ".......... .......... .......... .......... ..........  80% ∆0ms\n",
       ".......... .......... .......... .......... ..........  85% ∆0ms\n",
       ".......... .......... .......... .......... ..........  90% ∆0ms\n",
       ".......... .......... .......... .......... ..........  95% ∆0ms\n",
       ".......... .......... .......... .......... .......... 100% ∆0ms\n",
       "\n",
-      "Relationship linking COMPLETED in 1s 951ms\n",
+      "Relationship linking COMPLETED in 2s 108ms\n",
       "\n",
-      "(4/4) Post processing 2024-03-08 22:29:35.597+0000\n",
+      "(4/4) Post processing 2024-03-08 23:27:33.535+0000\n",
       "  Estimated required memory usage: 510.0MiB\n",
-      "-......... .......... .......... .......... ..........   5% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  10% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  15% ∆201ms\n",
-      ".......... .......... .......... .......... ..........  20% ∆0ms\n",
+      "-......... .......... .......... .......... ..........   5% ∆200ms\n",
+      ".......... .......... .......... .......... ..........  10% ∆201ms\n",
+      ".......... .......... .......... .......... ..........  15% ∆200ms\n",
+      ".......... .......... .......... .......... ..........  20% ∆1ms\n",
       ".......... .......... .......... .......... ..........  25% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  30% ∆0ms\n",
+      ".......... .......... .......... .......... ..........  30% ∆201ms\n",
       ".......... .......... .......... .......... ..........  35% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  40% ∆231ms\n",
-      ".......... .......... .......... .......... ..........  45% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  50% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  40% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  45% ∆201ms\n",
+      ".......... .......... .......... .......... ..........  50% ∆0ms\n",
       ".......... .......... .......... .......... ..........  55% ∆0ms\n",
       ".......... .......... .......... .......... ..........  60% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  65% ∆200ms\n",
+      ".......... .......... .......... .......... ..........  65% ∆201ms\n",
       ".......... .......... .......... .......... ..........  70% ∆0ms\n",
       ".......... .......... .......... .......... ..........  75% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  80% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  85% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  80% ∆1ms\n",
+      ".......... .......... .......... .......... ..........  85% ∆348ms\n",
       ".......... .......... .......... .......... ..........  90% ∆0ms\n",
-      ".......... .......... .......... .......... ..........  95% ∆155ms\n",
+      ".......... .......... .......... .......... ..........  95% ∆0ms\n",
       ".......... .......... .......... .......... .......... 100% ∆0ms\n",
       "\n",
-      "Post processing COMPLETED in 1s 356ms\n",
+      "Post processing COMPLETED in 2s 154ms\n",
       "\n",
       "\n",
-      "IMPORT DONE in 6s 640ms. \n",
+      "IMPORT DONE in 10s 914ms. \n",
       "Imported:\n",
       "  3045 nodes\n",
       "  4634490 relationships\n",
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "      <td>0.178435</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>2503</td>\n",
+       "      <td>1057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -543,7 +543,7 @@
        "      <td>0.178272</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>2503</td>\n",
+       "      <td>1057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -554,7 +554,7 @@
        "      <td>0.178272</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>2503</td>\n",
+       "      <td>1057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -565,7 +565,7 @@
        "      <td>0.178597</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>2503</td>\n",
+       "      <td>1057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -576,7 +576,7 @@
        "      <td>0.178310</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>2503</td>\n",
+       "      <td>1057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -597,7 +597,7 @@
        "      <td>1.310294e-06</td>\n",
        "      <td>0.150001</td>\n",
        "      <td>8</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -609,7 +609,7 @@
        "      <td>0.150003</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
-       "      <td>983</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3042</th>\n",
@@ -631,7 +631,7 @@
        "      <td>0.150000</td>\n",
        "      <td>8</td>\n",
        "      <td>0</td>\n",
-       "      <td>27</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3044</th>\n",
@@ -642,7 +642,7 @@
        "      <td>0.150000</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
-       "      <td>983</td>\n",
+       "      <td>126</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -664,22 +664,22 @@
        "3044  210217-2-39  0.150100          0.000486           5.721761e-08   \n",
        "\n",
        "      ArticleRank  LabelPropagation  Leiden  Louvain  \n",
-       "0        0.178435                 8       8     2503  \n",
-       "1        0.178272                 8       8     2503  \n",
-       "2        0.178272                 8       8     2503  \n",
-       "3        0.178597                 8       8     2503  \n",
-       "4        0.178310                 8       8     2503  \n",
+       "0        0.178435                 8       8     1057  \n",
+       "1        0.178272                 8       8     1057  \n",
+       "2        0.178272                 8       8     1057  \n",
+       "3        0.178597                 8       8     1057  \n",
+       "4        0.178310                 8       8     1057  \n",
        "...           ...               ...     ...      ...  \n",
-       "3040     0.150001                 8       1       27  \n",
-       "3041     0.150003                 8       5      983  \n",
+       "3040     0.150001                 8       2       27  \n",
+       "3041     0.150003                 8       5      126  \n",
        "3042     0.150001                 8       0       27  \n",
-       "3043     0.150000                 8       0       27  \n",
-       "3044     0.150000                 8       5      983  \n",
+       "3043     0.150000                 8       0      126  \n",
+       "3044     0.150000                 8       5      126  \n",
        "\n",
        "[3045 rows x 8 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,11 +715,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "close_driver()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../../data/current_graph_metrics.csv\", index=False)"
    ]
   }
  ],
