--- a/feature_engineering/feature_importance.ipynb
+++ b/feature_engineering/feature_importance.ipynb
@@ -9,6 +9,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix, precision_score, recall_score, f1_score\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
