Auto Import merge conflict

--- a/feature_engineering/real_baseline_removal.ipynb
+++ b/feature_engineering/real_baseline_removal.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "[8023575 rows x 6 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,6 +318,15 @@
     "lam = 10 ** 8\n",
     "p = 0.05\n",
     "df['Baseline_Corrected_Absorbance'] = df.groupby('SpecID')['Despiked_Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=lam, p=p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Baseline_Corrected_Absorbance'] = df.groupby('SpecID')['Absorbance'].transform(lambda x: baseline_als_optimized(x, lam=10**7, p=0.005))"
    ]
   },
   {
