--- a/graph_database/oil_paper_graph.ipynb
+++ b/graph_database/oil_paper_graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.read_csv(\"../../data/scaled_raw_spectra.csv\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -213,9 +222,153 @@
        "      <td>0.078669</td>\n",
        "      <td>Normal</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210526-3-45</th>\n",
+       "      <td>0.643137</td>\n",
+       "      <td>0.623699</td>\n",
+       "      <td>0.601578</td>\n",
+       "      <td>0.576774</td>\n",
+       "      <td>0.549288</td>\n",
+       "      <td>0.508734</td>\n",
+       "      <td>0.462695</td>\n",
+       "      <td>0.447633</td>\n",
+       "      <td>0.453338</td>\n",
+       "      <td>0.474087</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.041117</td>\n",
+       "      <td>0.067603</td>\n",
+       "      <td>0.084945</td>\n",
+       "      <td>0.087598</td>\n",
+       "      <td>0.093891</td>\n",
+       "      <td>0.078920</td>\n",
+       "      <td>0.051119</td>\n",
+       "      <td>0.010489</td>\n",
+       "      <td>-0.042972</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210526-3-46</th>\n",
+       "      <td>0.599662</td>\n",
+       "      <td>0.591945</td>\n",
+       "      <td>0.585733</td>\n",
+       "      <td>0.581026</td>\n",
+       "      <td>0.577825</td>\n",
+       "      <td>0.601022</td>\n",
+       "      <td>0.595371</td>\n",
+       "      <td>0.601333</td>\n",
+       "      <td>0.588499</td>\n",
+       "      <td>0.579060</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.067624</td>\n",
+       "      <td>0.094224</td>\n",
+       "      <td>0.114917</td>\n",
+       "      <td>0.124921</td>\n",
+       "      <td>0.129567</td>\n",
+       "      <td>0.120773</td>\n",
+       "      <td>0.101980</td>\n",
+       "      <td>0.073189</td>\n",
+       "      <td>0.034400</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210526-3-47</th>\n",
+       "      <td>0.655773</td>\n",
+       "      <td>0.605898</td>\n",
+       "      <td>0.565267</td>\n",
+       "      <td>0.533880</td>\n",
+       "      <td>0.511736</td>\n",
+       "      <td>0.523468</td>\n",
+       "      <td>0.526357</td>\n",
+       "      <td>0.507725</td>\n",
+       "      <td>0.460593</td>\n",
+       "      <td>0.432559</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.051051</td>\n",
+       "      <td>0.066116</td>\n",
+       "      <td>0.087011</td>\n",
+       "      <td>0.103461</td>\n",
+       "      <td>0.111600</td>\n",
+       "      <td>0.118459</td>\n",
+       "      <td>0.121036</td>\n",
+       "      <td>0.119329</td>\n",
+       "      <td>0.113339</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210526-3-48</th>\n",
+       "      <td>0.643305</td>\n",
+       "      <td>0.627259</td>\n",
+       "      <td>0.611341</td>\n",
+       "      <td>0.595550</td>\n",
+       "      <td>0.579887</td>\n",
+       "      <td>0.553512</td>\n",
+       "      <td>0.538080</td>\n",
+       "      <td>0.549171</td>\n",
+       "      <td>0.572432</td>\n",
+       "      <td>0.581814</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.069019</td>\n",
+       "      <td>0.068443</td>\n",
+       "      <td>0.058236</td>\n",
+       "      <td>0.058188</td>\n",
+       "      <td>0.046641</td>\n",
+       "      <td>0.040740</td>\n",
+       "      <td>0.034323</td>\n",
+       "      <td>0.027391</td>\n",
+       "      <td>0.019945</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>210526-3-49</th>\n",
+       "      <td>0.592388</td>\n",
+       "      <td>0.613364</td>\n",
+       "      <td>0.626006</td>\n",
+       "      <td>0.630313</td>\n",
+       "      <td>0.626285</td>\n",
+       "      <td>0.610222</td>\n",
+       "      <td>0.582170</td>\n",
+       "      <td>0.566619</td>\n",
+       "      <td>0.562657</td>\n",
+       "      <td>0.546696</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.072193</td>\n",
+       "      <td>0.058456</td>\n",
+       "      <td>0.066265</td>\n",
+       "      <td>0.051661</td>\n",
+       "      <td>0.052468</td>\n",
+       "      <td>0.054358</td>\n",
+       "      <td>0.058872</td>\n",
+       "      <td>0.066011</td>\n",
+       "      <td>0.075775</td>\n",
+       "      <td>Hyperglycemia</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 2636 columns</p>\n",
+       "<p>3045 rows × 2636 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -226,6 +379,12 @@
        "201210-1-02  0.502527   0.491051   0.479540   0.467993   0.456410   0.450161   \n",
        "201210-1-03  0.492251   0.418315   0.375666   0.364304   0.384230   0.461173   \n",
        "201210-1-04  1.000000   0.994372   0.989487   0.985346   0.981948   0.976845   \n",
+       "...               ...        ...        ...        ...        ...        ...   \n",
+       "210526-3-45  0.643137   0.623699   0.601578   0.576774   0.549288   0.508734   \n",
+       "210526-3-46  0.599662   0.591945   0.585733   0.581026   0.577825   0.601022   \n",
+       "210526-3-47  0.655773   0.605898   0.565267   0.533880   0.511736   0.523468   \n",
+       "210526-3-48  0.643305   0.627259   0.611341   0.595550   0.579887   0.553512   \n",
+       "210526-3-49  0.592388   0.613364   0.626006   0.630313   0.626285   0.610222   \n",
        "\n",
        "             204.10023  204.7836  205.46696  206.15034  ...  1994.5331  \\\n",
        "SpecID                                                  ...              \n",
@@ -234,6 +393,12 @@
        "201210-1-02   0.431959  0.424441   0.417415   0.408823  ...   0.144569   \n",
        "201210-1-03   0.570848  0.577491   0.675831   0.807648  ...   0.005644   \n",
        "201210-1-04   0.970762  0.977536   0.981513   0.963198  ...   0.019359   \n",
+       "...                ...       ...        ...        ...  ...        ...   \n",
+       "210526-3-45   0.462695  0.447633   0.453338   0.474087  ...   0.041117   \n",
+       "210526-3-46   0.595371  0.601333   0.588499   0.579060  ...   0.067624   \n",
+       "210526-3-47   0.526357  0.507725   0.460593   0.432559  ...   0.051051   \n",
+       "210526-3-48   0.538080  0.549171   0.572432   0.581814  ...   0.069019   \n",
+       "210526-3-49   0.582170  0.566619   0.562657   0.546696  ...   0.072193   \n",
        "\n",
        "             1995.2164  1995.8998  1996.5831  1997.2665  1997.9498  1998.6333  \\\n",
        "SpecID                                                                          \n",
@@ -242,25 +407,37 @@
        "201210-1-02   0.141991   0.139207   0.144627   0.149526   0.150847   0.150600   \n",
        "201210-1-03   0.007747   0.008992   0.010157   0.011991   0.011822   0.010642   \n",
        "201210-1-04   0.028442   0.041845   0.058730   0.063852   0.070008   0.074530   \n",
+       "...                ...        ...        ...        ...        ...        ...   \n",
+       "210526-3-45   0.067603   0.084945   0.087598   0.093891   0.078920   0.051119   \n",
+       "210526-3-46   0.094224   0.114917   0.124921   0.129567   0.120773   0.101980   \n",
+       "210526-3-47   0.066116   0.087011   0.103461   0.111600   0.118459   0.121036   \n",
+       "210526-3-48   0.068443   0.058236   0.058188   0.046641   0.040740   0.034323   \n",
+       "210526-3-49   0.058456   0.066265   0.051661   0.052468   0.054358   0.058872   \n",
        "\n",
-       "             1999.3167    2000.0  Status  \n",
-       "SpecID                                    \n",
-       "201210-1-00   0.084328  0.087409  Normal  \n",
-       "201210-1-01   0.154980  0.144994  Normal  \n",
-       "201210-1-02   0.148786  0.145404  Normal  \n",
-       "201210-1-03   0.008451  0.005248  Normal  \n",
-       "201210-1-04   0.077417  0.078669  Normal  \n",
+       "             1999.3167    2000.0         Status  \n",
+       "SpecID                                           \n",
+       "201210-1-00   0.084328  0.087409         Normal  \n",
+       "201210-1-01   0.154980  0.144994         Normal  \n",
+       "201210-1-02   0.148786  0.145404         Normal  \n",
+       "201210-1-03   0.008451  0.005248         Normal  \n",
+       "201210-1-04   0.077417  0.078669         Normal  \n",
+       "...                ...       ...            ...  \n",
+       "210526-3-45   0.010489 -0.042972  Hyperglycemia  \n",
+       "210526-3-46   0.073189  0.034400  Hyperglycemia  \n",
+       "210526-3-47   0.119329  0.113339  Hyperglycemia  \n",
+       "210526-3-48   0.027391  0.019945  Hyperglycemia  \n",
+       "210526-3-49   0.066011  0.075775  Hyperglycemia  \n",
        "\n",
-       "[5 rows x 2636 columns]"
+       "[3045 rows x 2636 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df"
    ]
   },
   {
@@ -279,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +918,7 @@
        "[3045 rows x 3045 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -766,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +959,7 @@
        "      dtype='object', name='SpecID', length=3045)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +1036,7 @@
        "201210-1-04  Normal"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -994,7 +1171,7 @@
        "[3045 rows x 1 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1440,7 @@
        "[5 rows x 3045 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1416,7 +1593,7 @@
        "[9272025 rows x 4 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1444,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1574,7 +1751,7 @@
        "[4634490 rows x 4 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1594,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
